@@ -1,0 +1,3 @@
+Site URL: https://www.erogarga.com/
+Contact: https://www.erogarga.com/contact-2/
+DMCA: https://www.erogarga.com/dmca/
